fixed overflow issue

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -4,11 +4,11 @@ Home Page Design
 
 ////////////////////////////////////////////////*/
 body {
-  background: fixed;
+  overflow: hidden;
 }
-
 .home-content {
   text-align: center;
+  padding-top: 8%;
 }
 #continueAsGuestButton,
 #loginButton {
@@ -16,11 +16,14 @@ body {
   color: white;
   font-family: "Slabo 27px", serif;
   font-size: 150%;
-  background-color: rgba(145, 174, 194, 0.952);
+  background-color: rgba(145, 174, 194, 0.918);
   border-radius: 25px;
   margin-right: 2.5%;
   margin-left: 2.5%;
-  /* margin-top: 5%; */
+  margin-top: 3%;
+  -webkit-box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 30px 0px rgba(0,0,0,0.75);
 }
 
 #homeHeader {
